--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Delete.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LeaveManagementSystem.Web.Data.LeaveType
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Leave Type";
 }
 
-<h1>Delete</h1>
+<h1>Delete Leave Type</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </form>
 </div>
