--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Details.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model LeaveManagementSystem.Web.Data.LeaveType
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = $"{Model.Name} Leave Type Details";
 }
 
-<h1>Details</h1>
+<h1>@Model.Name Details</h1>
 
 <div>
-    <h4>LeaveType</h4>
+   
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning">Edit</a> 
+    <a asp-action="Index" class="btn btn-primary">Back to List</a>
 </div>
