--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Edit.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model LeaveManagementSystem.Web.Data.LeaveType
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Leave Type";
 }
 
-<h1>Edit</h1>
+<h1>Edit Leave Type</h1>
 
 <h4>LeaveType</h4>
 <hr />
@@ -18,20 +18,23 @@
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            <br/>
             <div class="form-group">
                 <label asp-for="NumberOfDays" class="control-label"></label>
                 <input asp-for="NumberOfDays" class="form-control" />
                 <span asp-validation-for="NumberOfDays" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-warning" /> 
+                <a asp-action="Index" class="btn btn-primary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+   
 </div>
 
 @section Scripts {
