--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Create.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LeaveManagementSystem.Web.Data.LeaveType
 
 @{
-    ViewData["Title"] = "Create Leave Type";
+    ViewData["Title"] = "Create a Listing";
 }
 
 <h1>Create Leave Type</h1>
@@ -18,9 +18,9 @@
             </div>
             <br/> 
             <div class="form-group">
-                <label asp-for="NumberOfDays" class="control-label"></label>
-                <input asp-for="NumberOfDays" class="form-control" />
-                <span asp-validation-for="NumberOfDays" class="text-danger"></span>
+                <label asp-for="Days" class="control-label"></label>
+                <input asp-for="Days" class="form-control" />
+                <span asp-validation-for="Days" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
