--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Edit.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Edit.cshtml
@@ -20,9 +20,9 @@
             </div>
             <br/>
             <div class="form-group">
-                <label asp-for="NumberOfDays" class="control-label"></label>
-                <input asp-for="NumberOfDays" class="form-control" />
-                <span asp-validation-for="NumberOfDays" class="text-danger"></span>
+                <label asp-for="Days" class="control-label"></label>
+                <input asp-for="Days" class="form-control" />
+                <span asp-validation-for="Days" class="text-danger"></span>
             </div>
             <br />
             <div class="form-group">
