Refactor Details with ViewModel

--- a/LeaveManagementSystem.Web/Views/LeaveTypes/Index.cshtml
+++ b/LeaveManagementSystem.Web/Views/LeaveTypes/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using LeaveManagementSystem.Web.Models.LeaveTypes
-@model IEnumerable<IndexVM>
+@model IEnumerable<LeaveTypeReadOnlyVM>
 
 @{
     ViewData["Title"] = "Index";
